This branch is revived and fixed

--- a/css/home.css
+++ b/css/home.css
@@ -61,3 +61,8 @@
 	background-color: #072949;
 	color: white;
 }
+.profile-no-posts {
+	text-align: center;
+	margin-top: 100px;
+	color: #696969;
+}
